# asean-food-waste-sustainability

./: .gitignore  README.md  pyproject.toml
data/FAOSTAT/: faostat_food_security_indicators_south_eastern_asia.csv
data/FAOSTAT/metadata/: faostat_FBS_definition_and_standards.xlsx  faostat_FS_definition_and_standards.xlsx
notebooks/: 02-data-processing.ipynb  03-data-analysis.ipynb  FAOSTAT Processing.ipynb  data_analysis.ipynb  data_processing.ipynb
