[project]
name = "asean_food_waste_sustainability"
version = "0.1.0"
description = """
ASEAN Food Circularity System: A data-driven platform to address food waste
for well-being and sustainability. Submission for the ASEAN Data Science
Explorers 2025.
"""
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
    {name = "Giselia Davin Setiawan", email = "giseliadsetiawan@gmail.com"}
]
dependencies = ["pandas>=2.3.0", "ipykernel>=6.29.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false